--- a/myproject/patient/templates/patient_list.html
+++ b/myproject/patient/templates/patient_list.html
@@ -7,6 +7,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
+{% extends "base.html" %}
+
+{% block content %}
 <h1>Patients List</h1>
 <hr>
 <table border="2">
@@ -27,4 +30,5 @@
     </tr>
   {% endfor %}
 </table>
+{% endblock %}
 
