--- a/myproject/result/templates/result_list.html
+++ b/myproject/result/templates/result_list.html
@@ -21,6 +21,7 @@
         <th>Result</th>
         <th>Status</th>
         <th>Result processed on</th>
+        <th>Result created by<th>
 
     </tr>
   {% for result in results %}
@@ -36,6 +37,7 @@
       <td>{{ result.result_data|safe }}</td>
       <td>{{ result.result_status }}</td>
       <td>{{ result.result_date }}</td>
+      <td>{{ result.created_by }}<td>
 
       <td>
           <a class="btn btn-danger" href="{% url 'result_delete' result.pk %}">DELETE</a>
