--- a/myproject/user/templates/registration/login.html
+++ b/myproject/user/templates/registration/login.html
@@ -1,34 +1,43 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Login Here</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-{% block content %}
-  <h1>Login Here</h1>
-  <hr>
-  <form method="post">
-    {% csrf_token %}
-    <table >
-    {% for field in form %}
-    <tr>
-        <td>{{ field.label_tag }}</td>
-        <td>{{ field  }}
-    </tr>
-    <tr>
-        <td colspan="2"><hr></td>
-    </tr>
-    {% endfor %}
+</head>
+<body class="bg-light">
+    <div class="container-fluid">
+        <div class="row justify-content-center align-items-center min-vh-100">
+            <div class="col-md-6 col-lg-4">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h1 class="card-title text-center mb-4">Login Here!</h1>
+                        <div class='form-group'>
+                            <form method="post">
+                                {% csrf_token %}
+                                {% for field in form %}
+                                <div class="mb-3">
+                                    <label class="form-label">{{ field.label_tag }}</label>
+                                </div>
+                                <div class='mb-3'>
+                                    {{ field }}
+                                </div>
+                                    {% for error in field.errors %}
+                                    <div class="invalid-feedback d-block">{{ error }}</div>
+                                    {% endfor %}
+                                {% endfor %}
+                                <button class="btn btn-primary w-100" type="submit">Login</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-
-    {% if form.errors %}
-    <ul class="errorlist">
-        {% for field in form %}
-            {% for error in field.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-        {% endfor %}
-    </ul>
-    {% endif %}
-
-    </table>
-    <button type="submit">Login</button>
-  </form>
-{% endblock %}
-
+</body>
+</html>
 
