--- a/myproject/user/templates/change_password.html
+++ b/myproject/user/templates/change_password.html
@@ -1,27 +1,27 @@
-
+{% extends "base1.html" %}
 
 {% block content %}
   <h1>Change Password</h1>
   <hr>
   <form method="post">
     {% csrf_token %}
-    <table >
     {% for field in form %}
-    <tr>
-        <td>{{ field.label_tag }}</td>
-        <td>{{ field  }}
-    </tr>
-    <tr>
-        <td colspan="2"><hr></td>
-    </tr>
+        <div class="mb-3">
+            <label class="form-label" for="{{ field.id_for_field }}">{{ field.label_tag }}</label>
+            {{ field  }}
+        </div>
+    
+    
+        <!--<td colspan="2"><hr></td>-->
+    
     {% endfor %}
 
 
     {% if form.errors %}
-    <ul class="errorlist">
+    <ul class="errorlist text-danger">
         {% for field in form %}
             {% for error in field.errors %}
-            <li>{{ error }}</li>
+            <li><strong>{{ error }}</strong></li>
             {% endfor %}
         {% endfor %}
     </ul>
