added test cases to change_password view

--- a/myproject/user/templates/change_password.html
+++ b/myproject/user/templates/change_password.html
@@ -1,6 +1,15 @@
 {% extends "base1.html" %}
 
 {% block content %}
+
+
+    {% if form.non_field_errors %}
+        <div class="alert alert-danger">
+            {% for error in form.non_field_errors %}
+                {{ error }}
+            {% endfor %}
+        </div>
+    {% endif %}
   <h1>Change Password</h1>
   <hr>
   <form method="post">
