--- a/myproject/user/templates/registration/login.html
+++ b/myproject/user/templates/registration/login.html
@@ -13,6 +13,15 @@
             <div class="col-md-6 col-lg-4">
                 <div class="card shadow">
                     <div class="card-body">
+                        <!-- non field errors will be displayed when authentication fails -->
+                        {% if form.non_field_errors %}
+                            <div class="alert alert-danger">
+                                {% for error in form.non_field_errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                        <!--end of non_field_error block-->
                         <h1 class="card-title text-center mb-4">Login Heree!</h1>
                         <div class='form-group'>
                             <form method="post">
