--- a/myproject/sample/templates/sample_update.html
+++ b/myproject/sample/templates/sample_update.html
@@ -20,7 +20,7 @@
     <ul class="errorlist">
         {% for field in form %}
             {% for error in field.errors %}
-            <li>{{ error }}</li>
+            <li>{{field.label}}{{ error }}</li>
             {% endfor %}
         {% endfor %}
     </ul>
