--- a/myproject/patient/templates/patient_search.html
+++ b/myproject/patient/templates/patient_search.html
@@ -3,6 +3,16 @@
 {% block content %}
 <h1> Search for patients </h1>
 <hr>
+
+{% if search_form.errors %}
+<ul class="errorlist">
+    {% for field in search_form %}
+        {% for error in field.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+    {% endfor %}
+</ul>
+{% endif %}
 <form method ="get">
     
     {% csrf_token %}
@@ -24,9 +34,33 @@
 
 {% if patients %}
 <div class="card-deck">
-    {% for patient in patients %}
-    {{patient.name}}
-    {% endfor %}
+
+    <table class="table table-striped table-hover table-sm align-middle" border="2">
+        <tr>
+            <th scope="col">S.No</th>
+            <th scope="col">UPN</th>
+            <th scope="col">Name</th>
+            <th scope="col">Notes</th>
+        </tr>
+        {% for patient in patients %}
+
+        <tr>
+            <th scope="row">{{ forloop.counter }} </th> 
+            <td><a href="{% url 'patient_update' patient.pk %}">{{ patient.pk }}</a></td>
+            <td>{{ patient.name}}</td>
+            <td>{{ patient.notes|safe }}</td>
+
+            <td>
+                <a class="btn btn-primary" href="{% url 'sample_create' patient.pk %}">ADD ANOTHER SAMPLE</a>
+            </td>
+
+          <td>
+              <a class="btn btn-danger" href="{% url 'patient_delete' patient.pk %}">DELETE</a>
+          </td>
+        </tr>
+        {% endfor %}
+
+    </table>
 </div>
 
 {% else %}
