--- a/myproject/templates/base1.html
+++ b/myproject/templates/base1.html
@@ -48,6 +48,8 @@
                                            <a href="/patients/">Patient List</a></li>
                                     <li class="list-group-item">
                                            <a href="/patient_form/">Add Patient</a></li>
+                                    <li class="list-group-item">
+                                           <a href="/patient_search/">Search Patient</a></li>
                                 </ul>
                             </li>
 							<!-- submenu ends -->
@@ -67,7 +69,7 @@
                                     <li class="list-group-item">
                                            <a href="/samples/">Sample List</a></li>
                                     <li class="list-group-item">
-                                           <a href="/sample_form/">Add Sample</a></li>
+                                           <a href="/patient_search/">Add Sample</a></li>
                                 </ul>
                             </li>
 							<!-- submenu ends -->
