--- a/myproject/patient/templates/patient_search.html
+++ b/myproject/patient/templates/patient_search.html
@@ -4,21 +4,21 @@
 <h1> Search for patients </h1>
 <hr>
 
-{% if search_form.errors %}
+{% if form.errors %}
 <ul class="errorlist">
-    {% for field in search_form %}
+    {% for field in form %}
         {% for error in field.errors %}
         <li>{{ error }}</li>
         {% endfor %}
     {% endfor %}
 </ul>
 {% endif %}
-<form method ="get">
+<form method ="post">
     
     {% csrf_token %}
     <div class="row">
 
-        {% for field in search_form %}
+        {% for field in form %}
             <div class="col-md-3">
                     <div class="form-group">
                         {{ field.label_tag }}
@@ -32,64 +32,6 @@
 
 <hr>
 
-{% if patients %}
-<div class="card-deck">
-
-    <table class="table table-striped table-hover table-sm align-middle" border="2">
-        <tr>
-            <th scope="col">S.No</th>
-            <th scope="col">UPN</th>
-            <th scope="col">Name</th>
-            <th scope="col">Notes</th>
-        </tr>
-
-        {% for patient in page_obj %}
-
-        <tr>
-            <th scope="row">{{ forloop.counter }} </th> 
-            <td><a href="{% url 'patient_update' patient.pk %}">{{ patient.pk }}</a></td>
-            <td>{{ patient.name}}</td>
-            <td>{{ patient.notes|safe }}</td>
-
-            <td>
-                <a class="btn btn-primary" href="{% url 'sample_create' patient.pk %}">ADD ANOTHER SAMPLE</a>
-            </td>
-
-          <td>
-              <a class="btn btn-danger" href="{% url 'patient_delete' patient.pk %}">DELETE</a>
-          </td>
-        </tr>
-        {% endfor %}
-
-    </table>
-</div>
-
-{% else %}
-<p> No patients found.</p>
-{% endif %}
-    
-</div>
-
-<!-- Pagination code-->
-
-
-{% if is_paginated %}
-<h1>hello</h1>
-    {% if page_obj.has_previous %}
-        <h2>Previous page</h2>
-        <a href="?page=1">&laquo; first</a>
-        <a href="?page={{ page_obj.previous_page_number }}&amp;{{ query_params }}">previous</a>
-    {% endif %}
-    <span class="current">
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-    </span>
-    {% if page_obj.has_next %}
-        <h2>nextpage</h2>
-        <a href="?page={{ page_obj.next_page_number }}&amp;{{ query_params }}">next</a>
-        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-    {% endif %}
-{% endif %}
-
-<!-- end of pagination code -->
-
 {% endblock %}
+
+
