--- a/myproject/sample/templates/sample_list.html
+++ b/myproject/sample/templates/sample_list.html
@@ -1,28 +1,26 @@
-<head>
-  <!-- Link to the Bootstrap CSS file -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <!-- Link to the Bootstrap JavaScript file -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</head>
+
+{% extends "base1.html" %}
+
+<div class="container-fluid">
+{% block content %}
 
 <h1>Samples List</h1>
 <hr>
-<table border="2">
-    <tr>
-        <th>S.No</th>
-        <th>Patient Name</th>
-        <th>Unique Specimen Id</th>
-        <th>Sample Id</th>
-        <th>Date arrived</th>
-        <th>Sample Type</th>
-        <th>Department</th>
+<table class="table table-striped table-hover table-sm align-middle" border="2">
+    <tr >
+        <th scope="col">S.No</th>
+        <th scope="col">Patient Name</th>
+        <th scope="col">Unique Specimen Id</th>
+        <th scope="col">Sample Id</th>
+        <th scope="col">Date arrived</th>
+        <th scope="col">Sample Type</th>
+        <th scope="col">Department</th>
+        <th scope="col">Delete</th>
 
     </tr>
   {% for sample in samples %}
     <tr>
-      <td>{{ forloop.counter }}</td>
+      <th scope="row">{{ forloop.counter }}</th>
 
         <td><a href="{% url 'sample_update' sample.pk %}">{{ sample.patient.name }}</a></td>
       <td>{{ sample.unique_specimen_id  }}</td>
@@ -38,3 +36,42 @@
   {% endfor %}
 </table>
 
+<!-- Pagination code-->
+
+
+    <nav aria-label="...">
+        <ul class="pagination justify-content-center pagination-sm">
+        {% if is_paginated %}
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page=1">&laquo;<b>1</b></a>
+            </li>
+
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}&amp;{{query_params}}">&lArr;</a>
+            </li>
+            {% endif %}
+            <li class="page-item current active">
+                <span class="page-link">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+            </li>
+            {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number}}&amp;{{ query_params }}"><b>&rArr;</b></a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}&raquo;</a>
+            </li>
+            {% endif %}
+        {% endif %}
+        </ul>
+    </nav>
+
+
+
+<!-- end of pagination code -->
+
+{% endblock %}
+
+</div>
