--- a/myproject/sample/templates/sample_search.html
+++ b/myproject/sample/templates/sample_search.html
@@ -5,21 +5,21 @@
 <h1> Search for samples</h1>
 <hr>
 
-{% if search_form.errors %}
+{% if form.errors %}
 <ul class="errorlist">
-    {% for field in search_form %}
+    {% for field in form %}
         {% for error in field.errors %}
         <li>{{ error }}</li>
         {% endfor %}
     {% endfor %}
 </ul>
 {% endif %}
-<form method ="get">
+<form method ="post">
     
     {% csrf_token %}
     <div class="row">
 
-        {% for field in search_form %}
+        {% for field in form %}
             <div class="col-md-3">
                     <div class="form-group">
                         {{ field.label_tag }}
@@ -33,79 +33,6 @@
 
 <hr>
 
-{% if samples %}
-<div class="card-deck">
-
-    <table class="table table-striped table-hover table-sm align-middle" border="2">
-        <tr>
-            
-            <th scope="col">S.No</th>
-            <th scope="col">Patient Name</th>
-            <th scope="col">Unique Specimen Id</th>
-            <th scope="col">Sample Id</th>
-            <th scope="col">Date arrived</th>
-            <th scope="col">Sample Type</th>
-            <th scope="col">Department</th>
-            <th scope="col">Delete</th>
-        </tr>
-
-        {% for sample in page_obj %}
-
-        <tr>
-            <th scope="row">{{ forloop.counter }} </th> 
-            <td><a href="{% url 'sample_update' sample.pk %}">{{ sample.patient.name }}</a></td>
-            <td>{{ sample.unique_specimen_id }}</td>
-            <td>{{ sample.sample_id}}</td>
-            <td>{{ sample.date_time_arrived}}</td>
-            <td>{{ sample.sample_type}}</td>
-            <td>{{ sample.department}}</td>
-
-            <td>
-                <a class="btn btn-danger" href="{% url 'sample_delete' sample.pk %}">DELETE</a>
-            </td>
-
-        </tr>
-        {% endfor %}
-
-    </table>
-</div>
-
-{% else %}
-<p> No samples found.</p>
-{% endif %}
-
-<!-- Pagination code-->
-
-    <nav aria-label="...">
-        <ul class="pagination justify-content-center pagination-sm">
-        {% if is_paginated %}
-            {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page=1">&laquo;<b>1</b></a>
-            </li>
-
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}&amp;{{query_params}}">&lArr;</a>
-            </li>
-            {% endif %}
-            <li class="page-item current active">
-                <span class="page-link">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                </span>
-            </li>
-            {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number}}&amp;{{ query_params }}"><b>&rArr;</b></a>
-            </li>
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}&raquo;</a>
-            </li>
-            {% endif %}
-        {% endif %}
-        </ul>
-    </nav>
-
-<!-- end of pagination code -->
     
 </div>
 
